highlight html blue to make bug visible

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -382,3 +382,7 @@
   border-radius: inherit;
   transition: width 0.2s ease-in;
 }
+
+html {
+  background: blue;
+}
